new sections and changes inpackagejson

--- a/index.html
+++ b/index.html
@@ -141,6 +141,50 @@
         </div>
     </section>
 
+    <!-- section projects -->
+
+    <section class="projects">
+        <div class="container">
+            <div class="row">
+                <div class="projects_content">
+                    <h2>our projects</h2>
+                    <h5>what we create</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="menu_projects">
+                    <ul>
+                        <li><a href="#">all</a></li>
+                        <li><a href="#">photos</a></li>
+                        <li><a href="">branding</a></li>
+                        <li><a href="">adwerts</a></li>
+                        <li><a href="">development</a></li>
+                        <li><a href="">misc</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+                <div class="col-3"></div>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
