add new sections

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                 <div class="col-6">
                     <div class="about_video">
                         <video controls>
-                            <source src="/images/Cane - 31180.mp4" type="video/mp4">
-
+                            <source src="./images/Cane - 31180.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -102,7 +101,7 @@
     <section class="services">
         <div class="container">
             <div class="row">
-                <div class="services_content">
+                <div class="services_title">
                     <h2>services</h2>
                     <h5>services that we provide</h5>
                 </div>
@@ -111,7 +110,7 @@
                 <div class="col-3">
                     <div class="services_box">
                         <span class="fas fa-award"></span>
-                        <h3>high quality<br>design</br></h3>
+                        <h3>high quality<br>design</h3>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
@@ -126,14 +125,14 @@
                 <div class="col-3">
                     <div class="services_box">
                         <span class="far fa-clock"></span>
-                        <h3>regular<br>updates<br></h3>
+                        <h3>regular<br>updates</h3>
                         <p>Lorem ipsum dolor sit.</p>
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="services_box last">
                         <span class="far fa-comment-dots"></span>
-                        <h3>fast and free<br>support</br></h3>
+                        <h3>fast and free<br>support</h3>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
@@ -154,37 +153,379 @@
             <div class="row">
                 <div class="menu_projects">
                     <ul>
-                        <li><a href="#">all</a></li>
-                        <li><a href="#">photos</a></li>
-                        <li><a href="">branding</a></li>
-                        <li><a href="">adwerts</a></li>
-                        <li><a href="">development</a></li>
-                        <li><a href="">misc</a></li>
+                        <li><a href="all">all</a></li>
+                        <li><a href="photos">photos</a></li>
+                        <li><a href="branding">branding</a></li>
+                        <li><a href="adwerts">adwerts</a></li>
+                        <li><a href="development">development</a></li>
+                        <li><a href="misc">misc</a></li>
                     </ul>
                 </div>
             </div>
+            <div class="gallery_project">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-1.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-2.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-3.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-4.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-5.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-6.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-7.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-8.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-9.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-10.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-11.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="box">
+                            <figure>
+                                <img src="./images/project-12.jpg" alt="">
+                            </figure>
+                            <div class="layer">
+                                <h4>about</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row btn_box">
+                    <button class="btn_main">more projects</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- section team -->
+
+    <section class="team">
+        <div class="container">
             <div class="row">
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
+                <div class="team_title">
+                    <h2>our team</h2>
+                    <h5>our co-workers</h5>
+                </div>
             </div>
             <div class="row">
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
+                <div class="col-4">
+                    <div class="team_box">
+                        <figure>
+                            <img src="./images/worker-1.png" alt="">
+                        </figure>
+                        <h3>jane doe</h3>
+                        <p>Master mind</p>
+                        <ul class="social_media">
+                            <li>
+                                <a href="#"><span class="fab fa-twitter"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><span class="fab fa-instagram">
+                                    </span>
+                                </a>
+                            </li>
+                            <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                            <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                            <li><a href="#"><span class="fab fa-youtube"></span></a></li>
+                            <li><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
+                            <li><a href="#"><span class="fas fa-ellipsis-h"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="team_box">
+                        <figure>
+                            <img src="./images/worker-2.png" alt="">
+                        </figure>
+                        <h3>mike shiller</h3>
+                        <p>Creative head</p>
+                        <ul class="social_media">
+                            <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+                            <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+                            <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                            <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                            <li><a href="#"><span class="fab fa-youtube"></span></a></li>
+                            <li><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
+                            <li><a href="#"><span class="fas fa-ellipsis-h"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="team_box">
+                        <figure>
+                            <img src="./images/worker-3.png" alt="">
+                        </figure>
+                        <h3>anna johns</h3>
+                        <p>Technical lead</p>
+                        <ul class="social_media">
+                            <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+                            <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+                            <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                            <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                            <li><a href="#"><span class="fab fa-youtube"></span></a></li>
+                            <li><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
+                            <li><a href="#"><span class="fas fa-ellipsis-h"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
+                <ul class="paginator">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- section clients -->
+
+    <section class="clients">
+        <div class="container">
+            <div class="row">
+                <div class="clients_title">
+                    <h2>happy clients</h2>
+                    <h5>client reviews</h5>
+                </div>
             </div>
         </div>
 
     </section>
 
+    <!-- section logos -->
+
+    <section class="logos">
+        <div class="container">
+            <div class="row center">
+                <div class="col-2 logo_box">
+                    <figure>
+                        <img src="./images/logo-1.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-2 logo_box">
+                    <figure>
+                        <img src="./images/logo-2.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-2 logo_box">
+                    <figure>
+                        <img src="./images/logo-3.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-2 logo_box">
+                    <figure>
+                        <img src="./images/logo-4.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-2 logo_box">
+                    <figure>
+                        <img src="./images/logo-5.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-2 logo_box">
+                    <figure>
+                        <img src="./images/logo-6.png" alt="">
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- section price -->
+
+    <section class="price">
+        <div class="container">
+            <div class="row">
+                <div class="price_title">
+                    <h2>price</h2>
+                    <h5>pricing table</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <div class="price_box">
+                        <h4>express</h4>
+                        <h2>$ 9.99</h2>
+                        <h4>/month</h4>
+                        <p>Tracking Issues</p>
+                        <span>-</span>
+                        <p>Add bugs through emall</p>
+                        <span>-</span>
+                        <p>Notifications</p>
+                        <span>-</span>
+                        <p>Time tracking</p>
+                        <span>-</span>
+                        <p>Custom views</p>
+                        <button>choose</button>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="price_box">
+                        <h4>standart</h4>
+                        <h2>$ 14.99</h2>
+                        <h4>/month</h4>
+                        <p>Tracking Issues</p>
+                        <span>-</span>
+                        <p>Add bugs through emall</p>
+                        <span>-</span>
+                        <p>Notifications</p>
+                        <span>-</span>
+                        <p>Time tracking</p>
+                        <span>-</span>
+                        <p>Custom views</p>
+                        <button>choose</button>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="price_box">
+                        <h4>luxe</h4>
+                        <h2>$ 19.99</h2>
+                        <h4>/month</h4>
+                        <p>Tracking Issues</p>
+                        <span>-</span>
+                        <p>Add bugs through emall</p>
+                        <span>-</span>
+                        <p>Notifications</p>
+                        <span>-</span>
+                        <p>Time tracking</p>
+                        <span>-</span>
+                        <p>Custom views</p>
+                        <button>choose</button>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="price_box">
+                        <h4>premium</h4>
+                        <h2>$ 24.99</h2>
+                        <h4>/month</h4>
+                        <p>Tracking Issues</p>
+                        <span>-</span>
+                        <p>Add bugs through emall</p>
+                        <span>-</span>
+                        <p>Notifications</p>
+                        <span>-</span>
+                        <p>Time tracking</p>
+                        <span>-</span>
+                        <p>Custom views</p>
+                        <button>choose</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
