--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                         <span class="far fa-star"></span>
                         <h3>modern design</h3>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
-
                     </div>
                 </div>
                 <div class="col-3">
@@ -523,6 +522,76 @@
                         <button>choose</button>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- section premium -->
+
+    <section class="premium">
+        <div class="container">
+            <div class="row">
+                <div class="premium_title">
+                    <h2>premium</h2>
+                    <h5>even more features available</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-5">
+                    <figure>
+                        <img src="./images/premium-box.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="col-7">
+                    <ul class="premium_list">
+                        <li>
+                            <figure>
+                                <img src="./images/list-icon.png" alt="">
+                            </figure>
+                            <div class="premium_content">
+                                <h3>first feature</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, explicabo.</p>
+                                <p>-feature one</p>
+                                <p>-feature two</p>
+                                <p>-feature three</p>
+                            </div>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./images/list-icon.png" alt="">
+                            </figure>
+                            <div class="premium_content">
+                                <h3>second feature</h3>
+                                <p>Lorem ipsum dolor sit
+                                    amet consectetur.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./images/list-icon.png" alt="">
+                            </figure>
+                            <div class="premium_content">
+                                <h3>third feature</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="line"></div>
+            </div>
+            <div class="row">
+                <ul class="paginator">
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="row center">
+                <button class="btn_main">get in touch</button>
             </div>
         </div>
     </section>
